INTYGFV-15332: Added saml login for rehabsod frontend.